# LM

./: FINAL_REPORT.md  INSTALL_EIGEN_CUDA.md  METRIC_VERIFICATION.md  README.md  comparison_report.csv  comparison_report.md  results_cpp_eigen.json  results_cpp_no_eigen.json  results_python_numpy.json  results_python_pure.json  results_rust.json
cpp/: main.cpp
cpp/cuda/cublas/: CMakeLists.txt  lm_cublas.cu
cpp/cuda/custom_kernels/: CMakeLists.txt  lm_kernels.cu  main.cu
cpp/eigen/: CMakeLists.txt  main.cpp
cpp/no_eigen/: CMakeLists.txt  main.cpp  matrix_ops.hpp
data/: test_data.csv
python/pure_python/: lm_pure.py
python/with_numpy/: lm_numpy.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
scripts/: compare_results.py  generate_data.py  install_deps.ps1  install_deps.sh  visualize_results.py
