[package]
name = "levenberg_marquardt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lm_rust"
path = "src/main.rs"

[dependencies]
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

